Issue #18303: XdocsExampleFileTest should catch fact that ExampleX.java is not referenced in respected Test class