@@ -28,7 +28,7 @@ import java.io.UncheckedIOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -131,10 +131,10 @@ public class XdocsExampleFileTest {
 
     @Test
     public void testAllXdocsExamplesAreReferencedInExampleTests() throws Exception {
-        final Path exampleRoot = Paths.get(
+        final Path exampleRoot = Path.of(
                 "src/xdocs-examples/resources/com/puppycrawl/tools/checkstyle/checks");
 
-        final Path testRoot = Paths.get(
+        final Path testRoot = Path.of(
                 "src/xdocs-examples/java/com/puppycrawl/tools/checkstyle/checks");
 
         assertWithMessage("xdocs examples directory not found: %s", exampleRoot)
